* fix centering the dialog with the correct size on small screens;

--- a/frontend-react/src/components/dialog/Dialog.scss
+++ b/frontend-react/src/components/dialog/Dialog.scss
@@ -1,8 +1,9 @@
 .background {
-  @apply absolute w-full h-full top-0 left-0 bg-black/50 grid items-center justify-center px-5;
+  @apply absolute w-full h-full top-0 left-0 bg-black/50 px-5;
 
   .dialog-box {
     @apply relative md:max-w-[400px] bg-white h-auto p-[25px] rounded-md flex flex-col space-y-6;
+    @apply top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
 
     &__title {
       @apply text-xl;
